<resources>
    <string name="app_name">Bottom NavBarFrag</string>
    <string name="nav_home">Home</string>
    <string name="nav_mall">Mall</string>
    <string name="nav_notif">Notification</string>
    <string name="nav_swaf">Transaction</string>
    <string name="nav_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="mall">Mall</string>
    <string name="notif">notif</string>
    <string name="transaction">Transaction</string>

</resources>
